[package]
name = "matasano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
itertools = "0.12.0"
reqwest = { version = "0.11.20", features = ["blocking"] }

[dependencies.aes]
path = "../aes"

[profile.dev] 
debug = true  
opt-level = 0
