[package]
name = "matasano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
itertools = "0.12.0"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["blocking"] }
urlencoding = "2.1.3"

[dependencies.aes]
path = "../aes"

[dependencies.utils]
path = "../utils"

[profile.dev] 
debug = true  
opt-level = 0
